# video_utils

./: .flake8  .readthedocs.yaml  README.md  pyproject.toml  requirements.txt  setup.py
LaunchDaemons/: makemkv_watchdog.plist  plex_dvr_watchdog.plist
docs/source/: clis.rst  comskip.rst  conf.py  dependencies.rst  email.rst  examples.rst  hdr.rst  index.rst  settings.rst  tagging.rst  video_utils.audio.rst  video_utils.plex.rst  video_utils.rst  video_utils.subtitles.rst  video_utils.utils.rst  video_utils.videotagger.API.rst  video_utils.videotagger.rst
docs/source/api/: index.rst  modules.rst  video_utils.audio.rst  video_utils.config.rst  video_utils.plex.rst  video_utils.rst  video_utils.subtitles.rst  video_utils.utils.rst  video_utils.videotagger.API.rst  video_utils.videotagger.api.rst  video_utils.videotagger.rst  video_utils.watchdogs.rst
docs/source/naming/: index.rst  movie.rst  tv.rst
src/video_utils/: __init__.py  comremove.py  mediainfo.py  videoconverter.py
src/video_utils/audio/: audio_delay.py  dolby_downmix.py  replace_audio_streams.py
src/video_utils/config/: __init__.py  settings.yml
src/video_utils/plex/: dvr_converter.py  plex_media_scanner.py  utils.py
src/video_utils/subtitles/: __init__.py  ccextract.py  (+5 more)
systemd/: makemkv_watchdog.service  plex_dvr_watchdog.service
video_utils/: MKV_Cron_Convert.py  MakeMKV_Watchdog.py  Music_Watchdog.py  Plex_DVR_PostProcess.py  __init__.py  _logging.py  comremove.py  config.py  mediainfo.py  version.py  videoconverter.py
video_utils/audio/: DolbyDownmix.py  audioDelay.py  audio_delay.py  dolby_downmix.py  replaceAudioStreams.py  replace_audio_streams.py
video_utils/config/: __init__.py  comskip.ini  settings.yml
video_utils/install_dep/: config.py  install_dep.py  install_utils.py
video_utils/install_scripts/: install_ccextractor.py  install_comskip.py
video_utils/mediainfo/: __init__.py  mediainfo.py
video_utils/plex/: DVRconverter.py  Plex_DVR_Watchdog.py  dvr_converter.py  library_watchdog.py  plexMediaScanner.py  plex_dvr_watchdog.py  plex_media_scanner.py  utils.py
video_utils/subtitles/: __init__.py  ccextract.py  opensubtitles.py  pgs_to_srt.py  srtUtils.py  srt_cleanup.py  srt_subs.py  srt_utils.py  subtitle_extract.py  vobsub_extract.py  vobsub_to_srt.py
video_utils/utils/: PopenPool.py  __init__.py  checkCLI.py  check_cli.py  combine_mp4_files.py  ffmpeg_utils.py  file_rename.py  handlers.py  hdr_utils.py  limitCPUusage.py  pidCheck.py  plex_utils.py  rename2Plex.py  spawnDaemon.py  splitOnChapter.py  subprocManager.py  subprocPool.py  subproc_manager.py  subproc_pool.py  test_dependencies.py  threadCheck.py  updateFileNames.py  update_file_names.py
video_utils/videotagger/: BaseItem.py  Episode.py  Movie.py  Person.py  Series.py  __init__.py  base_item.py  episode.py  getMetaData.py  getTMDb_Info.py  gui.py  mkvTags.py  mp4Tags.py  parsers.py  person.py  readers.py  tags.py  utils.py  writers.py
video_utils/watchdogs/: base.py  makemkv.py  plex_dvr.py
(+54 files in other folders)
