[build-system]
requires = [
    "setuptools>=61.0",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "video_utils"
version = "3.6.3"
description = "Package for transcoding video files to h264/h265 codec"
readme = "README.md"
authors = [
    {name="Kyle R. Wodzicki", email="krwodzicki@gmail.com"},
]

classifiers = [
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Video",
]

requires-python = ">=3.9"

dependencies = [
    "mutagen",
    "soundfile",
    "pillow", 
    "numpy",
    "scipy",
    "requests",
    "psutil",
    "watchdog",
    "pyYAML",
    "pgsrip",
    "plexapi",
]

[project.scripts]
comremove = "video_utils.comremove:cli"
MakeMKV_Watchdog = "video_utils.watchdogs.makemkv:cli"
Plex_DVR_Watchdog = "video_utils.watchdogs.plex_dvr:cli"
videotagger = "video_utils.videotagger.cli:cli"
rename_media_plex_tag_format = "video_utils.utils.clis:rename_media_plex_tag_format"
updateFileNames = "video_utils.utils.clis:update_file_names"
splitOnChapter = "video_utils.utils.clis:split_on_chapter"
plexToken = "video_utils.plex.utils:get_token_cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.yml", "*.ini", "*.ttf"]
